set database i raillway